--- a/properties.gradle
+++ b/properties.gradle
@@ -2,4 +2,5 @@ ext {
     mc_version = '1.20.2'
     loader_version = '0.14.23'
     yarn_mappings = '1.20.2+build.4'
+    fabric_version='0.90.0+1.20.2'
 }
